tests/sksl/errors/ArrayOfInvalidSize.glsl
### Compilation failed:

error: 1: array size must be positive
error: 2: array size must be positive
error: 3: array size must be positive
error: 4: expected 'int', but found 'float'
error: 5: integer is out of range for type 'int': 4000000000
error: 5: array size must be an integer
error: 6: expected 'int', but found 'bool'
error: 7: expected 'int', but found 'bool'
error: 8: expected 'int', but found 'int2'
error: 9: missing index in '[]'
error: 10: integer is out of range for type 'int': 4000000000
error: 12: array size must be positive
error: 13: array size must be positive
error: 14: array size must be positive
error: 15: array size must be an integer
error: 16: array size out of bounds
error: 17: array size must be an integer
error: 18: array size must be an integer
error: 19: array size must be an integer
error: 20: expected array dimension
error: 21: integer is out of range for type 'int': 4000000000
21 errors
